--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,8 +1,17 @@
-$color-body: #E5E5E5;
+$color-body: #F3F7FA;
 $color-block: #ffffff;
 $color-active: #2196F3;
 $color-price: #2196F3;
 $color-checkbox: #9ABBCE;
 
 $color-text-main: #4a4a4a;
-$color-text-card-title-item: #4a4a4a;
+$color-text-card-title-item: #A0B0B9;
+
+$box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+$border-radius: 5px;
+
+@mixin reset-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
