--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ html {
 body {
   background-color: $color-body;
   color: $color-text-main;
+  font-size: 12px;
   margin: 0;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
