--- a/src/Components/Cards/Cards.module.scss
+++ b/src/Components/Cards/Cards.module.scss
@@ -10,4 +10,37 @@
   background-color: $color-block;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
+  padding: 20px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price {
+  font-size: 24px;
+  font-weight: 600;
+  color: $color-price;
+  margin: 0;
+}
+
+.flight {
+  @include reset-list;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  &SubTitle {
+    color: $color-text-card-title-item;
+    font-size: 12px;
+    font-weight: 600;
+    margin: 3px 0;
+  }
+
+  &Info {
+    font-size: 14px;
+    font-weight: 600;
+  }
 }
