--- a/src/Components/Filter/Filter.module.scss
+++ b/src/Components/Filter/Filter.module.scss
@@ -1,6 +1,6 @@
 @import '../../assets/styles/variables.scss';
 
-.TransfersForm {
+.Filter {
   &Fieldset {
     padding: 20px 0 10px 0;
     margin: 0;
